In `filesystem_cache.py`: - Added a `cache_directory` attribute to the `FilesystemCache` class. - Modified the initialization to use the `config` dictionary for retrieving the `cache_directory` value. - Updated file operations to use the `cache_directory` attribute for consistency. - Improved error handling by raising a `FileNotFoundError` if the cache directory doesn't exist.
In `selenium_connector.py`:
- Moved the retrieval of `chrome_path` and `chromedriver_path` values from the `config` dictionary to local variables for clarity.
- Updated the Chrome options and binary location to use the local variables.
- Improved readability and maintainability.

In `keyword_endpoints.py`:
- Improved request data validation using a custom `RequestHandler` class.
- Refactored the endpoint function for better readability.
- Replaced `current_app` with local variables where appropriate.
- Added improved error handling using the `BadRequest` exception for bad requests.
- Returns a 400 status code for bad requests and includes detailed error information in the response.

In `web_scraper_api.py`:
- Removed unnecessary imports and variables.
- Added a cleanup function for disconnecting the Selenium connector when the application exits.
- Updated the initialization of the Selenium connector to use the app's configuration.
- Ensured the cache directory is created if it doesn't exist.
- Downloaded the NLTK punkt data for tokenization only if it hasn't been downloaded in the last day.
- Improved error handling for various exceptions during application initialization.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ web_scraper_api/selenium/chrome-*
 web_scraper_api/selenium/chrome-*.zip
 web_scraper_api/selenium/chromedriver-*
 web_scraper_api/selenium/chromedriver-*.zip
+web_scraper_api/config/sphinx/_build/
+web_scraper_api/config/sphinx/*.rst
+!web_scraper_api/config/sphinx/index.rst
