--- a/web_scraper_api/config/config.yaml
+++ b/web_scraper_api/config/config.yaml
@@ -1,3 +1,5 @@
-chrome_path: "selenium/chrome-linux64/chrome"
-chromedriver_path: "selenium/chromedriver-linux64/chromedriver"
-cache_directory: "cache"
+DEBUG: True
+web_scraper_api:
+    chrome_path: "selenium/chrome-linux64/chrome"
+    chromedriver_path: "selenium/chromedriver-linux64/chromedriver"
+    cache_directory: "cache"
