1. Structural Changes:    - Directory renaming and restructuring for improved organization.    - Addition of new Python modules for various purposes.
2. Code Modifications:
   - Updates to existing code files for better functionality.
   - Deletion of obsolete code.

3. Configuration Updates:
   - Introduction of new configuration files.
   - Modification of existing configuration files.

4. Dependency Management:
   - Updates to project dependencies in response to evolving requirements.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ __pycache__/
 ssh/
 ssh
 web_scraper_api/cache/
+web_scraper_api/log/
+web_scraper_api/screenshot/
 web_scraper_api/selenium/chrome-*
 web_scraper_api/selenium/chrome-*.zip
 web_scraper_api/selenium/chromedriver-*
