--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 __pycache__/
 ssh/
 ssh
+tools/sphinx/_build/
+tools/sphinx/*.rst
+!tools/sphinx/index.rst
 web_scraper_api/cache/
 web_scraper_api/log/
 web_scraper_api/screenshot/
@@ -10,6 +13,3 @@ web_scraper_api/selenium/chrome-*
 web_scraper_api/selenium/chrome-*.zip
 web_scraper_api/selenium/chromedriver-*
 web_scraper_api/selenium/chromedriver-*.zip
-web_scraper_api/config/sphinx/_build/
-web_scraper_api/config/sphinx/*.rst
-!web_scraper_api/config/sphinx/index.rst
