- Refactored project structure by modifying various configuration files (config.json, requirements.txt, uwsgi.ini, .gitignore, and api_contracts.json).
- Modified the selenium_connector.py in the web_scraper_api/app/connector directory.

- Added new modules: selenium_correios_enderecador_encomendas_handler.py and selenium_correios_handler_factory.py in the web_scraper_api/app/handler directory.

- Added new endpoints with correios_endpoints.py and JavaScript code with correios_enderecador_encomendas.js.

- Modified the main application file, web_scraper_api.py.

- These changes indicate a restructuring of the project and the introduction of new modules and functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ tools/sphinx/_build/
 tools/sphinx/*.rst
 !tools/sphinx/index.rst
 web_scraper_api/cache/
+web_scraper_api/download/
 web_scraper_api/log/
 web_scraper_api/screenshot/
 web_scraper_api/selenium/chrome-*
