--- a/web_scraper_api/config/config.json
+++ b/web_scraper_api/config/config.json
@@ -3,10 +3,12 @@
     "web_scraper_api": {
         "log_level": "INFO",
         "log_directory": "log",
-        "screenshot_directory": "screenshot",
-        "cache_directory": "cache",
         "api_contracts_path": "config/api_contracts.json",
+        "javascript_directory": "javascript",
+        "cache_directory": "cache",
+        "screenshot_directory": "screenshot",
         "chrome_path": "selenium/chrome-linux64/chrome",
-        "chromedriver_path": "selenium/chromedriver-linux64/chromedriver"
+        "chromedriver_path": "selenium/chromedriver-linux64/chromedriver",
+        "chrome_download_default_directory": "download"
     }
 }
