- Added 'openapi-core' and 'swagger-ui-py' to requirements.txt. - Added Swagger UI support for API documentation in web_scraper_api.py.

--- a/web_scraper_api/config/requirements.txt
+++ b/web_scraper_api/config/requirements.txt
@@ -5,12 +5,14 @@ flask_cors
 jsonschema
 langdetect
 nltk
+openapi-core
 pandas
 pandas-stubs
 pickle5
 requests
 retrying
 selenium
+swagger-ui-py
 thefuzz
 types-Flask-Cors
 types-PyYAML
