--- a/web_scraper_api/config/uwsgi.ini
+++ b/web_scraper_api/config/uwsgi.ini
@@ -2,8 +2,8 @@
 
 http = :5000
 
-#stats-http = true
-#stats = :6000
+stats-http = true
+stats = :6000
 
 need-app = true
 wsgi-file = main.py
@@ -18,7 +18,3 @@ die-on-term = true
 
 http-timeout = 86400
 buffer-size = 32768
-
-#logger = file:log/uwsgi.log
-#req-logger = file:log/request.log
-log-format = %(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)"
